--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <strong>Instructions:</strong>
         </div>
         <div class="row">
-            <p>The objective of the game is to make your <color class="blue">crystals number</color> equal the target number without going over. For every
+            <p>The objective of the game is to make your <em class="blue">crystals number</em> equal the target number without going over. For every
                 game, each crystal holds a different value. You must click on each crystal to find out how much to add in
                 order to hit your target number! May the odds be forever in your favor!
             </p>
