--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             </div>
         </div>
         <div class="row">
-            <img class="img-responsive col-3-md" id="crystal1" src="assets/images/blue_diamond.png">
-            <img class="img-responsive col-3-md" id="crystal2" src="assets/images/blue_diamond.png">
-            <img class="img-responsive col-3-md" id="crystal3" src="assets/images/blue_diamond.png">
-            <img class="img-responsive col-3-md" id="crystal4" src="assets/images/blue_diamond.png">
+            <img class="img-responsive col-3-md" id="crystal1" src="assets/images/blue_diamond.png" alt="crystal1">
+            <img class="img-responsive col-3-md" id="crystal2" src="assets/images/blue_diamond.png" alt="crystal2">
+            <img class="img-responsive col-3-md" id="crystal3" src="assets/images/blue_diamond.png" alt="crystal3">
+            <img class="img-responsive col-3-md" id="crystal4" src="assets/images/blue_diamond.png" alt="crystal4">
         </div>
 
     </div>
