updated portfolio page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     </div>
     <footer class="sticky-bottom">
-        <a href="https://luka2457.github.io/Bootstrap-Portfolio/portfolio.html">Luke's Portfolio</a>
+        <a href="http://lukekarlovich.com">Luke's Portfolio</a>
     </footer>
     <script type="text/javascript" src="assets/javascript/game.js"> </script>
 </body>
